--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,5 +4,6 @@
     justify-content: space-between;
     @include container;
     padding: $grid-unit;
+    margin-bottom: $grid-unit*5;
     /*grid-area: header*/
     }
