--- a/src/components/Header/Socio/Socio.module.css
+++ b/src/components/Header/Socio/Socio.module.css
@@ -1,26 +1,24 @@
 /*
-Error: Undefined mixin 'container'.
-        on line 5 of Header.module.scss, in `container'
-        from line 5 of Header.module.scss
+Error: Undefined variable: "$grid-unit".
+        on line 11 of Socio.module.scss
 
-1: .header {
-2:     display: flex;
-3:     align-items: center;
-4:     justify-content: space-between;
-5:     @include container;
-6:     padding: $grid-unit;
-7:     margin-bottom: $grid-unit*5;
-8:     /*grid-area: header*\/
-9:     }
+6:     justify-content: flex-start;
+7: }
+8: 
+9: .listItem {
+10:     width: 100%;
+11:     margin-bottom: $grid-unit;
+12:     margin-left: $grid-unit*2;
+13: }
+14: 
+15: .listLink {
+16:     display: flex;
 
 Backtrace:
-Header.module.scss:5:in `container'
-Header.module.scss:5
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:348:in `block in visit_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `block in with_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `with_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:346:in `visit_mixin'
+Socio.module.scss:11
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/variable.rb:49:in `_perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
@@ -64,4 +62,4 @@ C:/Ruby26-x64/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined mixin 'container'.\A         on line 5 of Header.module.scss, in `container'\A         from line 5 of Header.module.scss\A \A 1: .header {\A 2:     display: flex;\A 3:     align-items: center;\A 4:     justify-content: space-between;\A 5:     @include container;\A 6:     padding: $grid-unit;\A 7:     margin-bottom: $grid-unit*5;\A 8:     /*grid-area: header*/\A 9:     }"; }
+  content: "Error: Undefined variable: \"$grid-unit\".\A         on line 11 of Socio.module.scss\A \A 6:     justify-content: flex-start;\A 7: }\A 8: \A 9: .listItem {\A 10:     width: 100%;\A 11:     margin-bottom: $grid-unit;\A 12:     margin-left: $grid-unit*2;\A 13: }\A 14: \A 15: .listLink {\A 16:     display: flex;"; }
