--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,25 +1,26 @@
 /*
-Error: Undefined mixin 'container-fluid'.
-        on line 3 of Intro.module.scss, in `container-fluid'
-        from line 3 of Intro.module.scss
+Error: Undefined variable: "$grid-unit".
+        on line 6 of Intro.module.scss
 
-1: .header {
-2:   position: relative;
-3:   @include container-fluid;
-4:   margin-bottom: $grid-unit*3;
-5: }
-6: 
-7: .img {
-8:   position: relative;
+1: .intro {
+2:   display: grid;
+3:   grid-template-rows: 1fr;
+4:   grid-template-columns: 7fr 5fr;
+5:   grid-template-areas: 'content image' 'content image';
+6:   grid-gap: $grid-unit*5;
+7: 
+8:   &Wrapper {
+9:     @include container;
+10:   }
+11: 
 
 Backtrace:
-Intro.module.scss:3:in `container-fluid'
-Intro.module.scss:3
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:348:in `block in visit_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `block in with_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `with_mixin'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:346:in `visit_mixin'
+Intro.module.scss:6
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/variable.rb:49:in `_perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/operation.rb:67:in `_perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
@@ -63,4 +64,4 @@ C:/Ruby26-x64/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined mixin 'container-fluid'.\A         on line 3 of Intro.module.scss, in `container-fluid'\A         from line 3 of Intro.module.scss\A \A 1: .header {\A 2:   position: relative;\A 3:   @include container-fluid;\A 4:   margin-bottom: $grid-unit*3;\A 5: }\A 6: \A 7: .img {\A 8:   position: relative;"; }
+  content: "Error: Undefined variable: \"$grid-unit\".\A         on line 6 of Intro.module.scss\A \A 1: .intro {\A 2:   display: grid;\A 3:   grid-template-rows: 1fr;\A 4:   grid-template-columns: 7fr 5fr;\A 5:   grid-template-areas: 'content image' 'content image';\A 6:   grid-gap: $grid-unit*5;\A 7: \A 8:   &Wrapper {\A 9:     @include container;\A 10:   }\A 11: "; }
