--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -1,69 +1,20 @@
-.header {
-  position: relative;
-  @include container-fluid;
-  margin-bottom: $grid-unit*3;
-}
+.intro {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 7fr 5fr;
+  grid-template-areas: 'content image' 'content image';
+  grid-gap: $grid-unit*5;
 
-.img {
-  position: relative;
-  font-size: 0;
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.2);
+  &Wrapper {
+    @include container;
   }
 
-  img {
-    width: 100%;
-    height: 100%;
+  &Content {
+    grid-area: content;
   }
-}
 
-.linkWrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
-.link {
-  display: block;
-
-  &:hover {
-    .profileImg {
-      border: 6px solid rgba(255,255,255,0.3);
-    }
+  &Img {
+    grid-area: image;
   }
+
 }
-
-.profileImg {
-  width: 130px;
-  height: 130px;
-  border-radius: 100%;
-  box-shadow: none;
-  border: 6px solid rgba(255,255,255,0.2);
-  transition: $transition;
-
-  img {
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-  }
-}
-
-.profileName {
-  color: $color-white;
-  text-align: center;
-  margin-top: $grid-unit;
-}
-
