--- a/src/components/Intro/IntroTitle/IntroTitle.module.css
+++ b/src/components/Intro/IntroTitle/IntroTitle.module.css
@@ -1,26 +1,24 @@
 /*
-Error: Undefined variable: "$grid-unit".
-        on line 15 of Nav.module.scss
+Error: Undefined mixin 'container'.
+        on line 2 of IntroTitle.module.scss, in `container'
+        from line 2 of IntroTitle.module.scss
 
-10:     align-items: center;
-11:     justify-content: space-between;
-12: }
-13: 
-14: .listItem {
-15:     margin-left: $grid-unit*2;
-16: }
-17: 
-18: .listLink {
-19:     display: block;
-20:     padding: $grid-unit $grid-unit*2;
+1: .header {
+2:   @include container;
+3:   display: flex;
+4:   align-items: center;
+5:   justify-content: center;
+6:   margin-bottom: $grid-unit*3;
+7: }
 
 Backtrace:
-Nav.module.scss:15
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/variable.rb:49:in `_perform'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/operation.rb:67:in `_perform'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
+IntroTitle.module.scss:2:in `container'
+IntroTitle.module.scss:2
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:348:in `block in visit_mixin'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `block in with_mixin'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:98:in `with_mixin'
+C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:346:in `visit_mixin'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
@@ -64,4 +62,4 @@ C:/Ruby26-x64/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$grid-unit\".\A         on line 15 of Nav.module.scss\A \A 10:     align-items: center;\A 11:     justify-content: space-between;\A 12: }\A 13: \A 14: .listItem {\A 15:     margin-left: $grid-unit*2;\A 16: }\A 17: \A 18: .listLink {\A 19:     display: block;\A 20:     padding: $grid-unit $grid-unit*2;"; }
+  content: "Error: Undefined mixin 'container'.\A         on line 2 of IntroTitle.module.scss, in `container'\A         from line 2 of IntroTitle.module.scss\A \A 1: .header {\A 2:   @include container;\A 3:   display: flex;\A 4:   align-items: center;\A 5:   justify-content: center;\A 6:   margin-bottom: $grid-unit*3;\A 7: }"; }
