--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -4,9 +4,10 @@
   grid-template-columns: 7fr 5fr;
   grid-template-areas: 'content image' 'content image';
   grid-gap: $grid-unit*5;
+  margin-bottom: $grid-unit*5;
 
   &Wrapper {
-    @include container;
+    @include container-fluid;
   }
 
   &Content {
