--- a/src/components/Pattern/Pattern.module.css
+++ b/src/components/Pattern/Pattern.module.css
@@ -1,37 +1,24 @@
 /*
 Error: Undefined variable: "$grid-unit".
-        on line 6 of Pattern.module.scss
+        on line 4 of Pattern.module.scss
 
 1: .table {
 2:   width: 100%;
 3:   border-spacing: 0;
-4: 
-5:  th {
-6:     padding: $grid-unit*2;
-7:     border-bottom: 1px solid #e5e5e5;
-8:     border-right: 1px solid #e5e5e5;
-9:    font-weight: 400;
-10:    letter-spacing: 1px;
-11:    font-size: 18px;
+4:   margin-bottom: $grid-unit*5;
+5: 
+6:  th {
+7:     padding: $grid-unit*2;
+8:     border-bottom: 1px solid #e5e5e5;
+9:     border-right: 1px solid #e5e5e5;
 
 Backtrace:
-Pattern.module.scss:6
+Pattern.module.scss:4
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/operation.rb:67:in `_perform'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/tree/node.rb:50:in `perform'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `with_base'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `visit'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:440:in `block (2 levels) in visit_rule'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:440:in `map'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:440:in `block in visit_rule'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:438:in `visit_rule'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby26-x64/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
@@ -75,4 +62,4 @@ C:/Ruby26-x64/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$grid-unit\".\A         on line 6 of Pattern.module.scss\A \A 1: .table {\A 2:   width: 100%;\A 3:   border-spacing: 0;\A 4: \A 5:  th {\A 6:     padding: $grid-unit*2;\A 7:     border-bottom: 1px solid #e5e5e5;\A 8:     border-right: 1px solid #e5e5e5;\A 9:    font-weight: 400;\A 10:    letter-spacing: 1px;\A 11:    font-size: 18px;"; }
+  content: "Error: Undefined variable: \"$grid-unit\".\A         on line 4 of Pattern.module.scss\A \A 1: .table {\A 2:   width: 100%;\A 3:   border-spacing: 0;\A 4:   margin-bottom: $grid-unit*5;\A 5: \A 6:  th {\A 7:     padding: $grid-unit*2;\A 8:     border-bottom: 1px solid #e5e5e5;\A 9:     border-right: 1px solid #e5e5e5;"; }
