--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,30 +3,7 @@
 @import "fontello/css/fontello.css";
 @import "base/base";
 
-.view {
-    @include container;
-    display: grid;
-    width: 100%;
-    grid-template-areas: "menu sidebar" "main sidebar";
-    grid-auto-flow: dense;
-    grid-template-columns: 8fr 4fr;
-    grid-gap: 0 $grid-unit*7;
-}
-
-.content {
-    padding: $grid-unit*2 0;
-}
-
-.main__img {
-    width: 100%;
-    height: 250px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.main__img img {
-    width: 100%;
-    height: auto;
+footer {
+    font-size: 14px;
+    margin: $grid-unit*2 0;
 }
